gen/wxclParser.py
# Generated from /Users/macbookpro/Desktop/antlr/wxclDefinition/wxcl.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class wxclParser ( Parser ):

    grammarFileName = "wxcl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'content'", "':'", "'style'", "'<'", 
                     "'>'", "'navigationBar'", "'{'", "','", "'}'", "'page'", 
                     "'-'", "';'", "'=>'", "'swiper'", "'['", "']'", "'text'", 
                     "'image'", "'button'", "'navigation'", "'LogIn'", "'Pay'", 
                     "'LogOut'", "'list'", "'input'", "'view'", "'navigator'", 
                     "'''", "'color'", "'width'", "'height'", "'border'", 
                     "'('", "')'", "'width-initial'", "'color-initial'", 
                     "'position'", "'font'", "'align'", "'background'", 
                     "'listCol'", "'listColHeight'", "'interval'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Theme", "BorderStyle", "HorizontalValue", "VerticalValue", 
                      "FontWeight", "InputType", "ColorValue", "HexColor", 
                      "Unit", "Number", "String", "WS", "VariableName" ]

    RULE_project = 0
    RULE_navigationBar = 1
    RULE_pageList = 2
    RULE_page = 3
    RULE_pageContent = 4
    RULE_styleVariableList = 5
    RULE_styleVariable = 6
    RULE_component = 7
    RULE_swiper = 8
    RULE_ablum = 9
    RULE_text = 10
    RULE_image = 11
    RULE_button = 12
    RULE_function = 13
    RULE_list = 14
    RULE_input = 15
    RULE_view = 16
    RULE_navigator = 17
    RULE_gui = 18
    RULE_style = 19
    RULE_color = 20
    RULE_width = 21
    RULE_height = 22
    RULE_border = 23
    RULE_borderWidth = 24
    RULE_borderColor = 25
    RULE_position = 26
    RULE_font = 27
    RULE_fontSize = 28
    RULE_textAlign = 29
    RULE_background = 30
    RULE_rpxValue = 31
    RULE_list_col = 32
    RULE_list_rowHeight = 33
    RULE_swiper_interval = 34

    ruleNames =  [ "project", "navigationBar", "pageList", "page", "pageContent", 
                   "styleVariableList", "styleVariable", "component", "swiper", 
                   "ablum", "text", "image", "button", "function", "list", 
                   "input", "view", "navigator", "gui", "style", "color", 
                   "width", "height", "border", "borderWidth", "borderColor", 
                   "position", "font", "fontSize", "textAlign", "background", 
                   "rpxValue", "list_col", "list_rowHeight", "swiper_interval" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    Theme=44
    BorderStyle=45
    HorizontalValue=46
    VerticalValue=47
    FontWeight=48
    InputType=49
    ColorValue=50
    HexColor=51
    Unit=52
    Number=53
    String=54
    WS=55
    VariableName=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Theme(self):
            return self.getToken(wxclParser.Theme, 0)

        def navigationBar(self):
            return self.getTypedRuleContext(wxclParser.NavigationBarContext,0)


        def pageList(self):
            return self.getTypedRuleContext(wxclParser.PageListContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_project

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject" ):
                listener.enterProject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject" ):
                listener.exitProject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProject" ):
                return visitor.visitProject(self)
            else:
                return visitor.visitChildren(self)




    def project(self):

        localctx = wxclParser.ProjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_project)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(wxclParser.T__0)
            self.state = 71
            self.match(wxclParser.T__1)
            self.state = 72
            self.match(wxclParser.T__2)
            self.state = 73
            self.match(wxclParser.T__3)
            self.state = 74
            self.match(wxclParser.Theme)
            self.state = 75
            self.match(wxclParser.T__4)
            self.state = 76
            self.navigationBar()
            self.state = 77
            self.pageList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NavigationBarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ColorValue(self):
            return self.getToken(wxclParser.ColorValue, 0)

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def HexColor(self):
            return self.getToken(wxclParser.HexColor, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_navigationBar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNavigationBar" ):
                listener.enterNavigationBar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNavigationBar" ):
                listener.exitNavigationBar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNavigationBar" ):
                return visitor.visitNavigationBar(self)
            else:
                return visitor.visitChildren(self)




    def navigationBar(self):

        localctx = wxclParser.NavigationBarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_navigationBar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(wxclParser.T__5)
            self.state = 80
            self.match(wxclParser.T__6)
            self.state = 81
            self.match(wxclParser.ColorValue)
            self.state = 82
            self.match(wxclParser.T__7)
            self.state = 83
            self.match(wxclParser.String)
            self.state = 84
            self.match(wxclParser.T__7)
            self.state = 85
            self.match(wxclParser.HexColor)
            self.state = 86
            self.match(wxclParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PageListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def page(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.PageContext)
            else:
                return self.getTypedRuleContext(wxclParser.PageContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_pageList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPageList" ):
                listener.enterPageList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPageList" ):
                listener.exitPageList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPageList" ):
                return visitor.visitPageList(self)
            else:
                return visitor.visitChildren(self)




    def pageList(self):

        localctx = wxclParser.PageListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pageList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.page()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(wxclParser.Number, 0)

        def VariableName(self):
            return self.getToken(wxclParser.VariableName, 0)

        def pageContent(self):
            return self.getTypedRuleContext(wxclParser.PageContentContext,0)


        def styleVariableList(self):
            return self.getTypedRuleContext(wxclParser.StyleVariableListContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_page

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPage" ):
                listener.enterPage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPage" ):
                listener.exitPage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPage" ):
                return visitor.visitPage(self)
            else:
                return visitor.visitChildren(self)




    def page(self):

        localctx = wxclParser.PageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_page)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(wxclParser.T__9)
            self.state = 94
            self.match(wxclParser.T__10)
            self.state = 95
            self.match(wxclParser.Number)
            self.state = 96
            self.match(wxclParser.T__1)
            self.state = 97
            self.match(wxclParser.VariableName)
            self.state = 98
            self.match(wxclParser.T__6)
            self.state = 99
            self.pageContent()
            self.state = 100
            self.match(wxclParser.T__8)
            self.state = 101
            self.styleVariableList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PageContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.ComponentContext)
            else:
                return self.getTypedRuleContext(wxclParser.ComponentContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_pageContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPageContent" ):
                listener.enterPageContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPageContent" ):
                listener.exitPageContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPageContent" ):
                return visitor.visitPageContent(self)
            else:
                return visitor.visitChildren(self)




    def pageContent(self):

        localctx = wxclParser.PageContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pageContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 103
                self.component()
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 252592128) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleVariableListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def styleVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wxclParser.StyleVariableContext)
            else:
                return self.getTypedRuleContext(wxclParser.StyleVariableContext,i)


        def getRuleIndex(self):
            return wxclParser.RULE_styleVariableList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleVariableList" ):
                listener.enterStyleVariableList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleVariableList" ):
                listener.exitStyleVariableList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyleVariableList" ):
                return visitor.visitStyleVariableList(self)
            else:
                return visitor.visitChildren(self)




    def styleVariableList(self):

        localctx = wxclParser.StyleVariableListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_styleVariableList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==56:
                self.state = 108
                self.styleVariable()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StyleVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VariableName(self):
            return self.getToken(wxclParser.VariableName, 0)

        def gui(self):
            return self.getTypedRuleContext(wxclParser.GuiContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_styleVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleVariable" ):
                listener.enterStyleVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleVariable" ):
                listener.exitStyleVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyleVariable" ):
                return visitor.visitStyleVariable(self)
            else:
                return visitor.visitChildren(self)




    def styleVariable(self):

        localctx = wxclParser.StyleVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_styleVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(wxclParser.VariableName)
            self.state = 115
            self.match(wxclParser.T__1)
            self.state = 116
            self.gui()
            self.state = 117
            self.match(wxclParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def swiper(self):
            return self.getTypedRuleContext(wxclParser.SwiperContext,0)


        def text(self):
            return self.getTypedRuleContext(wxclParser.TextContext,0)


        def image(self):
            return self.getTypedRuleContext(wxclParser.ImageContext,0)


        def button(self):
            return self.getTypedRuleContext(wxclParser.ButtonContext,0)


        def list_(self):
            return self.getTypedRuleContext(wxclParser.ListContext,0)


        def input_(self):
            return self.getTypedRuleContext(wxclParser.InputContext,0)


        def view(self):
            return self.getTypedRuleContext(wxclParser.ViewContext,0)


        def navigator(self):
            return self.getTypedRuleContext(wxclParser.NavigatorContext,0)


        def gui(self):
            return self.getTypedRuleContext(wxclParser.GuiContext,0)


        def VariableName(self):
            return self.getToken(wxclParser.VariableName, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = wxclParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.state = 119
                self.swiper()
                pass
            elif token in [17]:
                self.state = 120
                self.text()
                pass
            elif token in [18]:
                self.state = 121
                self.image()
                pass
            elif token in [19]:
                self.state = 122
                self.button()
                pass
            elif token in [24]:
                self.state = 123
                self.list_()
                pass
            elif token in [25]:
                self.state = 124
                self.input_()
                pass
            elif token in [26]:
                self.state = 125
                self.view()
                pass
            elif token in [27]:
                self.state = 126
                self.navigator()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 129
                self.match(wxclParser.T__12)
                self.state = 132
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [28]:
                    self.state = 130
                    self.gui()
                    pass
                elif token in [56]:
                    self.state = 131
                    self.match(wxclParser.VariableName)
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 136
            self.match(wxclParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwiperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ablum(self):
            return self.getTypedRuleContext(wxclParser.AblumContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_swiper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwiper" ):
                listener.enterSwiper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwiper" ):
                listener.exitSwiper(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwiper" ):
                return visitor.visitSwiper(self)
            else:
                return visitor.visitChildren(self)




    def swiper(self):

        localctx = wxclParser.SwiperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_swiper)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(wxclParser.T__13)
            self.state = 139
            self.match(wxclParser.T__14)
            self.state = 140
            self.ablum()
            self.state = 141
            self.match(wxclParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AblumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self, i:int=None):
            if i is None:
                return self.getTokens(wxclParser.String)
            else:
                return self.getToken(wxclParser.String, i)

        def getRuleIndex(self):
            return wxclParser.RULE_ablum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAblum" ):
                listener.enterAblum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAblum" ):
                listener.exitAblum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAblum" ):
                return visitor.visitAblum(self)
            else:
                return visitor.visitChildren(self)




    def ablum(self):

        localctx = wxclParser.AblumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ablum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143
                self.match(wxclParser.String)
                self.state = 144
                self.match(wxclParser.T__11)
                self.state = 147 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==54):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = wxclParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(wxclParser.T__16)
            self.state = 150
            self.match(wxclParser.T__10)
            self.state = 151
            self.match(wxclParser.String)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(wxclParser.String, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_image

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImage" ):
                listener.enterImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImage" ):
                listener.exitImage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImage" ):
                return visitor.visitImage(self)
            else:
                return visitor.visitChildren(self)




    def image(self):

        localctx = wxclParser.ImageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_image)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(wxclParser.T__17)
            self.state = 154
            self.match(wxclParser.T__10)
            self.state = 155
            self.match(wxclParser.String)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ButtonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(wxclParser.FunctionContext,0)


        def String(self):
            return self.getToken(wxclParser.String, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_button

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterButton" ):
                listener.enterButton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitButton" ):
                listener.exitButton(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitButton" ):
                return visitor.visitButton(self)
            else:
                return visitor.visitChildren(self)




    def button(self):

        localctx = wxclParser.ButtonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_button)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(wxclParser.T__18)
            self.state = 158
            self.match(wxclParser.T__3)
            self.state = 159
            self.function()
            self.state = 160
            self.match(wxclParser.T__4)
            self.state = 161
            self.match(wxclParser.T__10)
            self.state = 162
            self.match(wxclParser.String)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VariableName(self):
            return self.getToken(wxclParser.VariableName, 0)

        def getRuleIndex(self):
            return wxclParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = wxclParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_function)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(wxclParser.T__19)
                self.state = 165
                self.match(wxclParser.T__10)
                self.state = 166
                self.match(wxclParser.VariableName)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(wxclParser.T__20)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.match(wxclParser.T__21)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.match(wxclParser.T__22)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pageContent(self):
            return self.getTypedRuleContext(wxclParser.PageContentContext,0)


        def getRuleIndex(self):
            return wxclParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = wxclParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(wxclParser.T__23)
            self.state = 173
            self.match(wxclParser.T__14)
            self.state = 174
            self.pageContent()
            self.state = 175
            self.match(wxclParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def InputType(self):
            return self.getToken(wxclParser.InputType, 0)
